# nomos

./: .gitignore  Cargo.toml
git-error/: Cargo.toml
git-error/src/: error.rs  lib.rs
git-hash/: Cargo.toml
git-hash/src/: borrowed.rs  lib.rs  owned.rs
git-objects/: Cargo.toml
git-objects/src/: lib.rs
git-odb/: Cargo.toml
git-repository/: Cargo.toml
git-repository/src/: error.rs  init.rs  lib.rs
src/: cli.rs  main.rs
