[package]
name = "nomos"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0-beta.5" }
git-repository = {path= "git-repository"}
git-error = {path = "git-error"}

[workspace]
members = [
    "git-objects",
    "git-repository",
    "git-odb",
    "git-hash",
    "git-error"
]

